--- a/index.html
+++ b/index.html
@@ -8,9 +8,23 @@
 </head>
 <body onload="init()">
 
-<section class="content" id="content"></section>
-<section class="images"></section>
+<button onClick="window.location.reload();">Refresh Page</button>
 
+<section class="content" id="content"></section>
+
+
+
+<div id="IMG1" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG2" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG3" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+         
+<div id="IMG4" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG5" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG6" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+
+<div id="IMG7" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG8" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
+<div id="IMG9" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
 
 
 
