just need to pic it

--- a/index.html
+++ b/index.html
@@ -8,23 +8,15 @@
 </head>
 <body onload="init()">
 
-<button onClick="window.location.reload();">Refresh Page</button>
+<button onclick="createTable()">Make Table</button>
+
+
 
 <section class="content" id="content"></section>
 
 
 
-<div id="IMG1" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG2" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG3" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-         
-<div id="IMG4" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG5" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG6" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
 
-<div id="IMG7" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG8" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
-<div id="IMG9" onclick="toggleClass(this)" onmouseover="addClass(this)" onmouseout="removeClass(this)"></div>
 
 
 
