--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body onload="init()">
 
+<button onClick="window.location.reload();">Refresh Page</button>
+
 <button onclick="createTable()">Make Table</button>
 
 
